guestbook/k8s/redis-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
        - name: master
          image: k8s.gcr.io/redis:e2e
          command:
            - redis-server
            - "/redis-master/redis.conf"
          volumeMounts:
            - name: config
              mountPath: /redis-master
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 250m
              memory: 1024Mi
          ports:
            - containerPort: 6379
      volumes:
        - name: config
          configMap:
            name: redis-config
            items:
              - key: redis-config
                path: redis.conf
