guestbook/k8s/redis-replica-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-replica
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      role: replica
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: redis
        role: replica
        tier: backend
    spec:
      containers:
        - name: replica
          image: gcr.io/google-samples/gb-redis-follower:v1
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 6379
