guestbook/k8s/redis-replica-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-replica
  labels:
    app: redis
    role: replica
    tier: backend
spec:
  ports:
  - port: 6379
  selector:
    app: redis
    role: replica
    tier: backend
